added icons to side bar

--- a/react-app/src/components/MyPage/myPage.css
+++ b/react-app/src/components/MyPage/myPage.css
@@ -1,7 +1,7 @@
 .body {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 200vh;
     width: 100vw;
-    background-color: #f6fbf3;
+    background-color: #dde0da;
 }
