--- a/react-app/src/components/MyPage/myPage.css
+++ b/react-app/src/components/MyPage/myPage.css
@@ -1,7 +1,13 @@
-.body {
-    margin: 0;
-    padding: 0;
+.my-page-background {
+    background: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/userhub-background.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     height: 100vh;
-    width: 100vw;
-    background-color: #dde0da;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
 }
