--- a/react-app/src/components/SideBarForm/sideBarForm.css
+++ b/react-app/src/components/SideBarForm/sideBarForm.css
@@ -42,7 +42,7 @@
 .myPage-form button {
     position: relative;
     top: 40px;
-    left: 35px;
+    left: 30px;
 }
 
 .myPage-form p {
@@ -75,4 +75,8 @@
     font-weight: bold;
     font-size: 15px;
     color:#6289bd;
+}
+
+.myPage-form form div {
+    animation: fadeIn 1.5s;
 }
