--- a/react-app/src/components/MyPage/myPage.css
+++ b/react-app/src/components/MyPage/myPage.css
@@ -1,5 +1,5 @@
 .my-page-background {
-    background: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/my-page-background.png");
+    background: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/pexels-pixabay-235994.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
