--- a/react-app/src/components/FromCenterButtonSmall/fromCenterButtonSmall.css
+++ b/react-app/src/components/FromCenterButtonSmall/fromCenterButtonSmall.css
@@ -4,7 +4,7 @@
 	position: relative;
 	padding: .5rem 2.2rem;
 	padding-right: 2.2rem;
-    color:#0f6eea;
+    color:#6289bd;
 	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);
 	cursor: pointer;
 	user-select: none;
