--- a/react-app/src/components/SaveModal/saveModal.css
+++ b/react-app/src/components/SaveModal/saveModal.css
@@ -1,112 +1,3 @@
-.save-icon-timeout{
-    position:relative;
-    background:white;
-    height:40px;
-    width:35px;
-    display:block;
-    padding-top:10px;
-    -moz-border-radius:3px;
-    border-radius:3px;
-  }
-
-  .save-icon-timeout:before{
-     content:"";
-     position:absolute;
-     top:0;
-     right:0;
-     border-width:0 10px 10px 0;
-     border-style:solid;
-     border-color:#a4a6a7 #3c4145;
-  }
-
-  .save-icon-timeout:after{
-    content:"✓";
-    color:#0f6eea;
-    font-size:30px;
-    position:absolute;
-    top:15%;left:20%;
-    -webkit-transform:scale(0);
-    -moz-transform:scale(0);
-    transform:scale(0);
-
-    -webkit-animation: pop 0.3s 3s forwards;
-       -moz-animation: pop 0.3s 3s forwards;
-            animation: pop 0.3s 3s forwards;
-  }
-
-  .loader{
-    background:#e2e2e2;
-    width:80%;
-    height:5px;
-    display:block;
-    margin:3px auto;
-
-    position:relative;
-    overflow:hidden;
-
-
-    -webkit-animation:fade-loaders 0.2s 3s forwards;
-       -moz-animation:fade-loaders 0.2s 3s forwards;
-            animation:fade-loaders 0.2s 3s forwards;
-  }
-
-  .loader:after{
-    content: "";
-    background:#3c4145;
-    width:0;
-    height:5px;
-    position:absolute;
-    top:0;left:0;
-  }
-
-  .loader:first-child:after{
-    -webkit-animation: loader 0.2s 1s forwards;
-       -moz-animation: loader 0.2s 1s forwards;
-            animation: loader 0.2s 1s forwards;
-  }
-
-  .loader:nth-child(2n):after{
-    -webkit-animation: loader 0.2s 1.5s forwards;
-       -moz-animation: loader 0.2s 1.5s forwards;
-            animation: loader 0.2s 1.5s forwards;
-  }
-
-  .loader:nth-child(3n):after{
-    -webkit-animation: loader 0.2s 2s forwards;
-       -moz-animation: loader 0.2s 2s forwards;
-            animation: loader 0.2s 2s forwards;
-  }
-
-  @-webkit-keyframes loader {0%{ width: 0%; }100% { width: 100%; }}
-     @-moz-keyframes loader {0%{ width: 0%; }100% { width: 100%; }}
-          @keyframes loader {0%{ width: 0%; }100% { width: 100%; }}
-
-  @-webkit-keyframes pop {
-    0%   { -webkit-transform: scale(0); }
-    100% { -webkit-transform: scale(1); }
-  }
-  @-moz-keyframes pop {
-    0%   { -moz-transform: scale(0); }
-    100% { -moz-transform: scale(1); }
-  }
-  @keyframes pop {
-    0%   { transform: scale(0); }
-    100% { transform: scale(1); }
-  }
-
-  @-webkit-keyframes fade-loaders{
-    0%   { opactity:1; }
-    100% { opacity:0; }
-  }
-  @-moz-keyframes fade-loaders{
-    0%   { opactity:1; }
-    100% { opacity:0; }
-  }
-  @keyframes fade-loaders{
-    0%   { opactity:1; }
-    100% { opacity:0; }
-  }
-
 
 .save-cancel {
     display: flex;
@@ -114,4 +5,30 @@
     align-items: center;
     justify-content: center;
     margin-top: 50px;
+}
+
+.save-cancel div {
+    margin-top: 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.save-cancel div button {
+    height: 25px;
+    width: 90px;
+}
+
+.save-section {
+    margin-top: 50px;
+    margin-left: 30px;
+    width: 20%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 5px 5px 5px black;
 }
