finished save model

--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -105,6 +105,6 @@
     border-bottom: 2px solid white;
 }
 
-html:not([data-scroll="0"]) #grid-container {
+html:not([data-scroll="0"]) .grid-container {
     background-color: rgba(209, 209, 209, 0.9);
 }
