--- a/react-app/src/components/SaveModal/saveModal.css
+++ b/react-app/src/components/SaveModal/saveModal.css
@@ -1,4 +1,3 @@
-
 .save-cancel {
     display: flex;
     flex-direction: column;
@@ -17,18 +16,43 @@
 }
 
 .save-cancel div button {
-    height: 25px;
+    height: 30px;
     width: 90px;
+    background-color: #6289bd;
+    border: none;
+    outline: none;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, .3);
+    color: white;
+    font-size: 18px;
+}
+.save-cancel div button:hover {
+    background-color: #6d99d1;
 }
 
-.save-section {
-    margin-top: 50px;
-    margin-left: 30px;
-    width: 20%;
-    height: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 5px 5px 5px black;
-}
+.lds-dual-ring {
+    display: inline-block;
+    position: absolute;
+    top: 50px;
+    left: 152px;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #6289bd;
+    border-color: #6289bd transparent #6289bd transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+  }
+  @keyframes lds-dual-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
