fixed radio button

--- a/react-app/src/components/PageNotFound/pageNotFound.css
+++ b/react-app/src/components/PageNotFound/pageNotFound.css
@@ -1,5 +1,5 @@
-.my-page-background {
-    background: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/pexels-kaboompics-com-6368.jpg");
+.not-found-background {
+    background: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/page-not-found.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
