--- a/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
+++ b/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
@@ -22,13 +22,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    /* background-color: rgba(209, 209, 209, 0.7); */
-    /* border: 2px solid white; */
+    background-color: rgba(209, 209, 209, 0.7);
+    border: 2px solid white;
 }
 
 .preview-container {
-    width: 90%;
+    width: 95%;
     height: 60%;
+    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); */
     background-image: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/layout-nav-left.png");
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
