--- a/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
+++ b/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
@@ -13,6 +13,10 @@
     background-color: rgba(209, 209, 209, 0.7);
     border: 2px solid white;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .horizontal-section {
@@ -22,15 +26,43 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    background-color: rgba(209, 209, 209, 0.7);
-    border: 2px solid white;
 }
 
 .preview-container {
-    width: 95%;
-    height: 60%;
-    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); */
+    width: 89.8%;
+    height: 49.8%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     background-image: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/layout-nav-left.png");
     background-size: contain;
     background-repeat: no-repeat;
+    object-fit: fill;
+    border: 2px solid white;
+}
+
+.horizontal-section h1 {
+    text-transform: uppercase;
+    font-size: 2.2rem;
+    letter-spacing: .2rem;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 80%;
+}
+
+.button-container button {
+    height: 45px;
+    width: 155px;
+    background-color: #6289bd;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+.button-container button:hover {
+    background-color: #6d99d1;
 }
