--- a/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
+++ b/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
@@ -5,6 +5,11 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-left: 2%;
+}
+
+.my-layout div h1 {
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .vertical-section {
@@ -26,16 +31,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    background-color: rgba(209, 209, 209, 0.7);
+    border: 2px solid white;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .preview-container {
-    width: 89.8%;
-    height: 49.8%;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    background-image: url("https://bloombucketjesse.s3.us-east-2.amazonaws.com/layout-nav-left.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    object-fit: fill;
+    width: 85%;
+    height: 50%;
     border: 2px solid white;
 }
 
