--- a/react-app/src/components/MyPage/LayoutCarousel/layoutCarousel.css
+++ b/react-app/src/components/MyPage/LayoutCarousel/layoutCarousel.css
@@ -1,8 +1,8 @@
-.my-layout {
-    height: 250px;
+.layout-section {
+    height: 100px;
     width: 450px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
 }
