--- a/react-app/src/components/MyPage/PreviewContainer/previewContainer.css
+++ b/react-app/src/components/MyPage/PreviewContainer/previewContainer.css
@@ -13,3 +13,14 @@
     height: 100%;
     font-size: 25px;
 }
+
+.preview-layout {
+    position: relative;
+    top: -100%;
+    left: 50%;
+    color: white;
+    font-size: 50px;
+    z-index: 1;
+    width: 50px;
+    height: 50px;
+}
